--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/LincWorld/demo/issues"
   },
-  "homepage": "https://github.com/LincWorld/demo#readme"
+  "homepage": "https://github.com/LincWorld/demo#readme",
+  "devDependencies": {
+    "config": "^1.25.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-newer": "^1.3.0",
+    "grunt-sass": "^2.0.0",
+    "nunjucks": "^3.0.0"
+  }
 }
